--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
-          token: ${{ secrets.GITHUB_AUTH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
           user: susheel
@@ -28,6 +28,8 @@ jobs:
           plugin_activity_filter: all
           plugin_activity_limit: 5
           plugin_activity_visibility: all
+          plugin_followup: yes
+          plugin_gists: yes
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_isocalendar: yes
@@ -36,6 +38,8 @@ jobs:
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
           plugin_lines: yes
+          plugin_pagespeed: yes
+          plugin_pagespeed_url: .user.website
           plugin_people: yes
           plugin_people_limit: 28
           plugin_people_size: 28
@@ -45,10 +49,6 @@ jobs:
           plugin_posts_user: .user.login
           plugin_projects: yes
           plugin_projects_limit: 4
-          plugin_stackoverflow: yes
-          plugin_stackoverflow_limit: 2
-          plugin_stackoverflow_lines: 4
-          plugin_stackoverflow_sections: answers-top, questions-recent
           plugin_stars: yes
           plugin_stars_limit: 4
           plugin_tweets: yes
